// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tolltip /> should match snapshot when closed 1`] = `
<body
  style="background-color: rgb(255, 255, 255); color: rgb(33, 35, 56);"
>
  <div>
    <div>
      trigger
    </div>
  </div>
</body>
`;

exports[`<Tolltip /> should match snapshot when opened 1`] = `
<body
  style="background-color: rgb(255, 255, 255); color: rgb(33, 35, 56);"
>
  <div>
    <div>
      trigger
    </div>
  </div>
  <div
    aria-hidden="false"
    class="block position_fixed root"
    style="position: absolute; left: 0px; top: 0px; margin: 0px;"
  >
    <div
      class="block 4_mobile_base 4_mobile_base 4_mobile_base 4_mobile_base width_full overflow_hidden userSelect_none pointerEvents_none 4_mobile_base 1_mobile_base backgroundColours_gray900_base root"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_white_base fontWeight_normal_base sizes_4_base"
      >
        tooltip content
      </span>
    </div>
  </div>
</body>
`;
